--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#654321"
@@ -15,7 +16,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintVertical_bias="0.15"
+        app:srcCompat="@drawable/pizza_circle"
+        tools:srcCompat="@drawable/pizza_circle" />
 
     <TextView
         android:id="@+id/textView_score"
@@ -23,8 +26,102 @@
         android:layout_height="wrap_content"
         android:text="Pizzas"
         android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="32sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".575" />
+
+    <TextView
+        android:id="@+id/textView_store"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Store"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout_store"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout_store"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout_store" />
+
+    <TextView
+        android:id="@+id/textView_upgrades"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
+        android:gravity="center"
+        android:text="Upgrades Bought"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout_upgrades"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout_upgrades"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout_upgrades" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/linearLayout_upgrades"
+        app:layout_constraintStart_toEndOf="@+id/linearLayout_store"
+        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout_store"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:weightSum="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal">
+
+        <ImageView
+            android:id="@+id/imageView_cursor"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:alpha=".35"
+            android:clickable="false"
+            app:srcCompat="@drawable/cursor"
+            tools:srcCompat="@drawable/cursor" />
+
+        <ImageView
+            android:id="@+id/imageView_oven"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:alpha=".35"
+            android:clickable="false"
+            app:srcCompat="@drawable/oven"
+            tools:srcCompat="@drawable/oven" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout_upgrades"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/guideline_vertical"
+        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal"></LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
